[package]
name = "hyper-unix-socket"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2021"
rust-version = "1.73.0"
authors = ["Kristof Mattei"]
description = "Default Unix Socket implementation for use with hyper"
license = "MIT OR Apache-2.0"
categories = ["library", "unix"]
keywords = ["hyper", "unix", "socket"]
repository = "https://github.com/kristof-mattei/hyper-unix-socket"

[dependencies]
bytes = "1"
hyper = { version = "1.0.0", default-features = false, features = [] }
hyper-util = { git = "https://github.com/hyperium/hyper-util", default-features = false, features = [
    "client",
], rev = "de1ff4c4d0ced92b571e873e6754baaed0906f6c" }
tokio = { version = "1", default-features = false }
tower-service = "0.3"
pin-project-lite = "0.2.13"

[dev-dependencies]
tokio = { version = "1.33.0", features = ["macros", "io-util"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util", default-features = false, features = [
    "http1",
], rev = "de1ff4c4d0ced92b571e873e6754baaed0906f6c" }
http-body-util = "0.1.0"
