[package]
name = "hyper-unix-socket"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2021"
rust-version = "1.80.0"
authors = ["Kristof Mattei"]
description = "Default Unix Socket implementation for use with hyper"
license = "MIT OR Apache-2.0"
categories = ["library", "unix"]
keywords = ["hyper", "unix", "socket"]
repository = "https://github.com/kristof-mattei/hyper-unix-socket"

[lints.clippy]
# don't stop from compiling / running
all = "warn"
pedantic = "warn"
cargo = "warn"
# this one causes confusion when combining variables (`foo`) and
# dereferenced variables (`foo.bar`). The latter cannot be inlined
# so we don't inline anything
uninlined-format-args = { level = "allow", priority = 127 }

[lints.rust]
let_underscore_drop = { level = "deny", priority = 127 }
non_ascii_idents = { level = "deny", priority = 127 }

[features]
coverage = []

[dependencies]
bytes = "1"
hyper = { version = "1.0.0", default-features = false, features = [] }
hyper-util = { version = "0.1.0", default-features = false, features = [
    "client-legacy",
    "tokio",
] }
tokio = { version = "1", default-features = false }
tower-service = "0.3"
pin-project-lite = "0.2.13"

[dev-dependencies]
tokio = { version = "1.33.0", features = ["macros", "io-util"] }
hyper-util = { version = "0.1.0", default-features = false, features = [
    "http1",
] }
http-body-util = "0.1.0"

[[example]]
doc-scrape-examples = true
name = "client"
required-features = ["tokio/io-std"]
