[package]
name = "hyper-unix-socket"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2021"
rust-version = "1.83.0"
authors = ["Kristof Mattei"]
description = "Default Unix Socket implementation for use with hyper"
license = "MIT OR Apache-2.0"
categories = ["network-programming"]
keywords = ["hyper", "unix", "socket"]
repository = "https://github.com/kristof-mattei/hyper-unix-socket"

[lints.clippy]
# don't stop from compiling / running
all = "warn"
cargo = "warn"
complexity = "warn"
correctness = "warn"
pedantic = "warn"
perf = "warn"
# restriction = "warn"
style = "warn"
suspicious = "warn"

# this has 0 performance implications, the binding is compiled away, and it could cause issues
# when done blindly, plus it makes it harder to debug as you cannot put breakpoints on return
# values of functions (yet)
let_and_return = { level = "allow", priority = 127 }
# this one is debatable. continue is used in places to be explicit, and to guard against
# issues when refactoring
needless_continue = { level = "allow", priority = 127 }
# this one causes confusion when combining variables (`foo`) and
# dereferenced variables (`foo.bar`). The latter cannot be inlined
# so we don't inline anything
uninlined-format-args = { level = "allow", priority = 127 }

[lints.rust]
let_underscore_drop = { level = "deny", priority = 127 }
non_ascii_idents = { level = "deny", priority = 127 }

[dependencies]
bytes = "1"
hyper = { version = "1.0.0", default-features = false, features = [] }
hyper-util = { version = "0.1.11", default-features = false, features = [
    "client-legacy",
    "tokio",
] }
pin-project-lite = "0.2.16"
tokio = { version = "1", default-features = false }
tower-service = "0.3"

[dev-dependencies]
http-body-util = "0.1.3"
hyper-util = { version = "0.1.11", default-features = false, features = [
    "http1",
] }
tokio = { version = "1.33.0", features = ["macros", "io-util"] }

[[example]]
doc-scrape-examples = true
name = "client"
required-features = ["tokio/io-std"]
